Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.4.0, 5.4.1
-
Windows 7, Windows 8.1
-
2f397aa15a13efbadf6c1bc378bb134ac1e655c5 (qtdeclarative/5.11, 26.4.2018, 5.11.1)
Description
Using Drag.dragType: Drag.Automatic triggers crash when drags are performed via touch.
The same code with Drag.dragType: Drag.Internal does not trigger the crash.
The dragged Item also does not move with the mouse when Drag.dragType: Drag.Automatic.
I have attached a copy of the Call Stack and the offending QML code for your convenience.
Attachments
Issue Links
- relates to
-
QTBUG-46361 QML Drag.Automatic doesn't work properly on Linux
-
- Closed
-
-
QTBUG-106368 Wrong Usage of DoDragDrop() Causes Drag and Drop via Touch to Hang
-
- Closed
-
For Gerrit Dashboard: QTBUG-44976 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
227253,2 | Fix crash when using drag with Drag.Automatic | 5.11 | qt/qtdeclarative | Status: MERGED | +2 | 0 |